fix: 프론트 단에서 요구한 여러 요구사항에 따라 수정하고, 일부 Stream API를 적용해 코드 단순화
프론트 단에서 요구한 사항 목록
- article 엔티티에 thumbnail 필드 추가
- article 목록 조회 시, 최근 생성된 순으로 정렬해서 전달
- 다른 사람의 컬렉션 목록들을 전체 조회하는 API 추가
- 컬렉션 목록 조회 시 전달되는 articles의 값을 articleId의 배열이 아닌, article 각각의 정보를 담은 객체 배열로 전달

요구사항에 따라 수정한 결과
- 아티클 등록 시 thumbnail에 url 형식 문자열 입력받는다고 가정 후
  ArticleRequestDto, ArticleResponseDto, ArticleService의 아티클 생성 및 수정 메소드를 수정하였다.
- JpaRepository의 findByUserIdOrderByCreatedAtDesc() 함수를 선언하여 해당 요구사항을 만족시키도록 하였다.
  이때, 최근 생성된 순으로 정렬시켜 조회하는 함수는 findMyArticle(), 즉 내 아티클을 조회하는 경우만으로 한정하였다.
- HTTP METHOD와 URI는 GET "/collections/other"로 설정하였다. JpaRepository의 query creation을 이용하여,
  `findByUserIdNotAndIsPublicIsTrue(Long userId)`라는 이름을 가진 메소드를 선언하여 요구사항을 만족시켰다.
  해당 메소드 실행 시 발생 쿼리: 'select * from collection where user_id <> {현재_user_id} AND is_public = TRUE'
- Collection 엔티티 클래스의 List<ArticleCollection> 타입의 articleCollections 필드를 stream API를 이용하여
  Collection 내의 Article 목록을 뽑아내는 `getArticles()`를 구현하였다. 이후, CollectionResponseDto 필드의
  articles 필드의 타입을 List<Long>에서 `List<ArticleReponseDto>`로 변경 후 of 메소드를 수정하여 요구사항을 만족시켰다.

Stream API를 사용하여 일부 수정한 내용
- Article 엔티티 클래스의 필드 List<ArticleTag> articleTags와 Stream API를 이용하여 해당 Article의 태그명을 얻는
  List<String> getTags()를 구현함으로써 일부 서비스 로직을 단순화하였다.
- 위 Collection 엔티티 클래스 내에 추가 구현한 getArticles() 함수를 통해 일부 서비스 로직을 단순화하였다.